Updated page Macro FCCircularText/pl

--- a/wiki/pl/Macro_FCCircularText.html
+++ b/wiki/pl/Macro_FCCircularText.html
@@ -4,7 +4,7 @@
 <li><a href="../es/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--med" title="Macro FCCircularText/es (26% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><a href="../fr/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--high" title="Macro CircularText (83% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--high" title="Macro Testo Circolare (83% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="pl" dir="ltr">polski</span></li></ul></div>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="pl" dir="ltr">polski</span></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -774,17 +774,11 @@ Tryb reliefu:
 <p><br>
 </p><p>(nie w pe&#322;ni rozwini&#281;te)
 </p><p>Planowane:
-</p>
-<div class="mw-translate-fuzzy">
-<p>Pisanie na &#347;cie&#380;ce &mdash; tekst okr&#261;g&#322;y wzgl&#281;dem wybranego obiektu pozycji.
-</p>
-</div>
-<p><span id="Change_log"></span>
+</p><p>Pisanie okr&#261;g&#322;ego tekstu na &#347;cie&#380;ce wybranego obiektu pozycji.
+</p><p><span id="Change_log"></span>
 </p>
 <h2><span class="mw-headline" id="Dziennik_zmian">Dziennik zmian</span></h2>
-<div class="mw-translate-fuzzy">
 <ul><li>ver 0.22f 2025/09/25&nbsp;: powr&oacute;t do PySide, dodanie informacji dla u&#380;ycia czcionki MONOSPACE</li></ul>
-</div>
 <ul><li>ver 0.22e 2024/07/11&nbsp;: usuni&#281;to <b>"ss.support = None"</b></li></ul>
 <ul><li>ver 0.22d 2024/07/11&nbsp;: usuni&#281;to <b>"import WebGui"</b> powoduj&#261;ce b&#322;&#261;d w FreeCAD 0.22xxx i zast&#261;piono przez <b>"import webbrowser"</b></li></ul>
 <ul><li>ver 0.22c 2023/11/17&nbsp;: dodano przywracanie zaznaczenia po usuni&#281;ciu ostatniego obiektu, autor TheMarkster, dzi&#281;ki</li></ul>
@@ -958,35 +952,35 @@ Tryb reliefu:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121182038
+Cached time: 20260121182103
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.409 seconds
-Real time usage: 0.681 seconds
-Preprocessor visited node count: 1520/1000000
+CPU time usage: 0.549 seconds
+Real time usage: 1.436 seconds
+Preprocessor visited node count: 1518/1000000
 Post&#8208;expand include size: 41963/2097152 bytes
 Template argument size: 13297/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 10/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 66963/5000000 bytes
+Unstrip post&#8208;expand size: 66967/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  431.663      1 -total
-  3.01%   13.009      6 Template:SpinBox
-  2.54%   10.954      1 Template:Draft_Tools_navi/pl
-  1.74%    7.510     10 Template:Code
-  1.31%    5.641      1 Template:Macro/pl
-  1.28%    5.519      2 Template:Navigation_menu_2
-  0.89%    3.836      1 Template:Userdocnavi/pl
-  0.84%    3.619      7 Template:RadioButton
-  0.77%    3.320      1 Template:Codeextralink
-  0.74%    3.206     10 Template:CheckBox
+100.00%  825.727      1 -total
+  2.86%   23.604     10 Template:Code
+  1.78%   14.713      1 Template:Codeextralink
+  1.68%   13.892      1 Template:Userdocnavi/pl
+  1.41%   11.673      1 Template:Draft_Tools_navi/pl
+  1.39%   11.479      1 Template:MenuCommand
+  1.10%    9.078      3 Template:ColoredText
+  1.02%    8.429     14 Template:Incode
+  0.76%    6.306      2 Template:Navigation_menu_2
+  0.68%    5.644      6 Template:SpinBox
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:253295-0!canonical and timestamp 20260121182038 and revision id 1742053. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:253295-0!canonical and timestamp 20260121182103 and revision id 1742057. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="../site.js"></script>
