--- a/wiki/pl/Macro_FCCircularText.html
+++ b/wiki/pl/Macro_FCCircularText.html
@@ -952,12 +952,12 @@ Tryb reliefu:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121182103
+Cached time: 20260121182101
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.549 seconds
-Real time usage: 1.436 seconds
+CPU time usage: 0.498 seconds
+Real time usage: 0.832 seconds
 Preprocessor visited node count: 1518/1000000
 Post&#8208;expand include size: 41963/2097152 bytes
 Template argument size: 13297/2097152 bytes
@@ -968,19 +968,19 @@ Unstrip post&#8208;expand size: 66967/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  825.727      1 -total
-  2.86%   23.604     10 Template:Code
-  1.78%   14.713      1 Template:Codeextralink
-  1.68%   13.892      1 Template:Userdocnavi/pl
-  1.41%   11.673      1 Template:Draft_Tools_navi/pl
-  1.39%   11.479      1 Template:MenuCommand
-  1.10%    9.078      3 Template:ColoredText
-  1.02%    8.429     14 Template:Incode
-  0.76%    6.306      2 Template:Navigation_menu_2
-  0.68%    5.644      6 Template:SpinBox
+100.00%  490.153      1 -total
+  1.35%    6.603      1 Template:Draft_Tools_navi/pl
+  1.25%    6.129      1 Template:Userdocnavi/pl
+  0.95%    4.651      6 Template:SpinBox
+  0.93%    4.563      1 Template:Macro/pl
+  0.92%    4.523     10 Template:Code
+  0.91%    4.446      3 Template:ColoredText
+  0.90%    4.436      7 Template:RadioButton
+  0.87%    4.246     10 Template:CheckBox
+  0.85%    4.166      1 Template:Codeextralink
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:253295-0!canonical and timestamp 20260121182103 and revision id 1742057. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:253295-0!canonical and timestamp 20260121182100 and revision id 1742057. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
