Updated page Sketcher Workbench/cs

--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -124,7 +124,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateLine.svg&amp;filetimestamp=20240101090429&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateLine.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateLine.html" title="Sketcher CreateLine">&Uacute;se&#269;ka</a>: Vytvo&#345;&iacute; p&#345;&iacute;mku. <a href="../index.php?title=Template;Verze&amp;action=edit&amp;redlink=1.html" class="new" title="Template:Verze (page does not exist)">Template:Verze</a>: N&aacute;stroj m&aacute; t&#345;i re&#382;imy.</li></ul>
 <ul><li><span id="Sketcher_CompCreateArc"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Sketcher_CreateArc.svg&amp;filetimestamp=20240101085740&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateArc.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow_blue_background.svg&amp;filetimestamp=20221006081506&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow_blue_background.svg" decoding="async" width="16" height="32" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span> Vytvo&#345;it oblouk:</span></li></ul>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateArc.svg&amp;filetimestamp=20240101085740&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateArc.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateArc.html" title="Sketcher CreateArc">Oblouk ze st&#345;edu</a>: Vytvo&#345;&iacute; oblouk podle jeho st&#345;edu a koncov&yacute;ch bod&#367;. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>: Nebo z jeho koncov&yacute;ch bod&#367; a bodu pod&eacute;l oblouku.</li></ul></dd></dl>
-<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_Create3PointArc.svg&amp;filetimestamp=20240101085650&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Create3PointArc.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Create3PointArc.html" title="Sketcher Create3PointArc">Oblouk ze 3 bod&#367;</a>: Vytvo&#345;&iacute; oblouk z jeho koncov&yacute;ch bod&#367; a bodu pod&eacute;l oblouku. <a href="../index.php?title=Template;Verze&amp;action=edit&amp;redlink=1.html" class="new" title="Template:Verze (page does not exist)">Template:Verze</a>: Jedn&aacute; se o stejn&yacute; n&aacute;stroj jako <a href="../Sketcher_CreateArc.html" title="Sketcher CreateArc">Oblouk ze st&#345;edu</a>, ale s odli&scaron;n&yacute;m po&#269;&aacute;te&#269;n&iacute;m re&#382;imem.</li></ul></dd></dl>
+<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_Create3PointArc.svg&amp;filetimestamp=20240101085650&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Create3PointArc.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Create3PointArc.html" title="Sketcher Create3PointArc">Oblouk ze 3 bod&#367;</a>: Vytvo&#345;&iacute; oblouk z jeho koncov&yacute;ch bod&#367; a bodu pod&eacute;l oblouku. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>: Jedn&aacute; se o stejn&yacute; n&aacute;stroj jako <a href="../Sketcher_CreateArc.html" title="Sketcher CreateArc">Oblouk ze st&#345;edu</a>, ale s odli&scaron;n&yacute;m po&#269;&aacute;te&#269;n&iacute;m re&#382;imem.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateArcOfEllipse.svg&amp;filetimestamp=20240101170312&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateArcOfEllipse.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateArcOfEllipse.html" title="Sketcher CreateArcOfEllipse">Eliptick&yacute; oblouk</a>: Vytvo&#345;&iacute; eliptick&yacute; oblouk.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateArcOfHyperbola.svg&amp;filetimestamp=20240101170323&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateArcOfHyperbola.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateArcOfHyperbola.html" title="Sketcher CreateArcOfHyperbola">Hyperbolick&yacute; oblouk</a>: Vytvo&#345;&iacute; hyperbolick&yacute; oblouk.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateArcOfParabola.svg&amp;filetimestamp=20240101170333&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateArcOfParabola.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateArcOfParabola.html" title="Sketcher CreateArcOfParabola">Parabolick&yacute; oblouk</a>: Vytvo&#345;&iacute; parabolick&yacute; oblouk.</li></ul></dd></dl>
@@ -435,21 +435,21 @@
 <ul><li><b>Help:</b> <a href="../cs/Tutorials.html" title="Tutorials/cs">Tutorials</a>, <a href="../cs/Video_tutorials.html" title="Video tutorials/cs">Video tutorials</a></li>
 <li><b><a href="../cs/Workbenches.html" title="Workbenches/cs">Workbenches</a>:</b> <a href="../cs/Std_Base.html" title="Std Base/cs">Std Base</a>, <a href="../index.php?title=Assembly_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Assembly Workbench/cs (page does not exist)">Assembly</a>, <a href="../index.php?title=BIM_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="BIM Workbench/cs (page does not exist)">BIM</a>, <a href="../cs/CAM_Workbench.html" title="CAM Workbench/cs">CAM</a>, <a href="../cs/Draft_Workbench.html" title="Draft Workbench/cs">Draft</a>, <a href="../cs/FEM_Workbench.html" title="FEM Workbench/cs">FEM</a>, <a href="../cs/Inspection_Workbench.html" title="Inspection Workbench/cs">Inspection</a>, <a href="../cs/Material_Workbench.html" title="Material Workbench/cs">Material</a>, <a href="../cs/Mesh_Workbench.html" title="Mesh Workbench/cs">Mesh</a>, <a href="../cs/OpenSCAD_Workbench.html" title="OpenSCAD Workbench/cs">OpenSCAD</a>, <a href="../cs/Part_Workbench.html" title="Part Workbench/cs">Part</a>, <a href="../cs/PartDesign_Workbench.html" title="PartDesign Workbench/cs">PartDesign</a>, <a href="../cs/Points_Workbench.html" title="Points Workbench/cs">Points</a>, <a href="../cs/Reverse_Engineering_Workbench.html" title="Reverse Engineering Workbench/cs">Reverse Engineering</a>, <a href="../cs/Robot_Workbench.html" title="Robot Workbench/cs">Robot</a>, <a class="mw-selflink selflink">Sketcher</a>, <a href="../cs/Spreadsheet_Workbench.html" title="Spreadsheet Workbench/cs">Spreadsheet</a>, <a href="../cs/Surface_Workbench.html" title="Surface Workbench/cs">Surface</a>, <a href="../cs/TechDraw_Workbench.html" title="TechDraw Workbench/cs">TechDraw</a>, <a href="../cs/Testing.html" title="Testing/cs">Test Framework</a></li></ul>
 <hr>
-<ul><li><b><a href="../index.php?title=Addon/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Addon/cs (page does not exist)">Addons</a>:</b> <a href="../index.php?title=Std_AddonMgr/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std AddonMgr/cs (page does not exist)">Addon Manager</a>, <a href="../index.php?title=External_workbenches/cs&amp;action=edit&amp;redlink=1.html" class="new" title="External workbenches/cs (page does not exist)">External workbenches</a>, <a href="../cs/Scripting_and_macros.html" title="Scripting and macros/cs">Scripting and macros</a></li></ul>
+<ul><li><b><a href="../index.php?title=Addon/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Addon/cs (page does not exist)">Addons</a>:</b> <a href="../index.php?title=Std_AddonMgr/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std AddonMgr/cs (page does not exist)">Addon Manager</a>, <a href="../cs/External_workbenches.html" title="External workbenches/cs">External workbenches</a>, <a href="../cs/Scripting_and_macros.html" title="Scripting and macros/cs">Scripting and macros</a></li></ul>
 <hr>
 <ul><li><b>Hubs:</b> <a href="../cs/User_hub.html" title="User hub/cs">User hub</a>, <a href="../cs/Power_users_hub.html" title="Power users hub/cs">Power users hub</a>, <a href="../cs/Developer_hub.html" title="Developer hub/cs">Developer hub</a></li></ul></div>
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118161015
+Cached time: 20260121194939
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.492 seconds
-Real time usage: 1.240 seconds
-Preprocessor visited node count: 1387/1000000
-Post&#8208;expand include size: 34965/2097152 bytes
-Template argument size: 9784/2097152 bytes
+CPU time usage: 0.412 seconds
+Real time usage: 0.695 seconds
+Preprocessor visited node count: 1392/1000000
+Post&#8208;expand include size: 35023/2097152 bytes
+Template argument size: 9790/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -457,19 +457,19 @@ Unstrip post&#8208;expand size: 4777/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   69.959      1 -total
- 19.29%   13.496      1 Template:Sketcher_Tools_navi/cs
- 19.24%   13.462      5 Template:MenuCommand
- 14.46%   10.118      2 Template:Docnav
- 12.84%    8.986      1 Template:Userdocnavi/cs
- 10.25%    7.173      2 Template:Navigation_menu_2
-  6.78%    4.742      1 Template:TOCright
-  5.35%    3.746     34 Template:Version
-  4.51%    3.157      1 Template:PropertyView
-  4.17%    2.914      6 Template:Caption
+100.00%   88.790      1 -total
+ 27.89%   24.764      1 Template:PropertyView
+ 19.71%   17.496      1 Template:Sketcher_Tools_navi/cs
+ 14.75%   13.095      1 Template:Variable
+ 11.16%    9.905      1 Template:Userdocnavi/cs
+  6.54%    5.806      2 Template:Navigation_menu_2
+  6.18%    5.491      8 Template:VersionPlus
+  5.72%    5.080      1 Template:Version/cs
+  5.54%    4.917     14 Template:KEY
+  5.37%    4.769      6 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118161013 and revision id 1740741. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260121194938 and revision id 1742062. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
