--- a/wiki/Robust_MCP_Bridge_Workbench.html
+++ b/wiki/Robust_MCP_Bridge_Workbench.html
@@ -84,7 +84,7 @@
 </td></tr></tbody></table>
 <p><span typeof="mw:File"><a href="index.php?title=Addon_RobustMCPBridge_preferences.png&amp;filetimestamp=20260119180008&amp;.html" class="mw-file-description" title="Robust MCP Bridge workbench preference pane"><img alt="Robust MCP Bridge workbench preference pane" src="File/Addon_RobustMCPBridge_preferences.png" decoding="async" width="800" height="588" class="mw-file-element" data-file-width="1786" data-file-height="1312"></a></span>
 </p>
-<h2><span class="mw-headline" id="Features_by_Mode">Features by Mode</span></h2>
+<h2><span class="mw-headline" id="Features_by_mode">Features by mode</span></h2>
 <table class="wikitable">
 <tbody><tr>
 <th>Feature</th>
@@ -163,12 +163,12 @@
 <li><a rel="nofollow" class="external text" href="https://modelcontextprotocol.io/">Model Context Protocol</a> - The protocol specification.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260121205911
+Cached time: 20260121205954
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.067 seconds
-Real time usage: 0.075 seconds
+CPU time usage: 0.088 seconds
+Real time usage: 0.157 seconds
 Preprocessor visited node count: 251/1000000
 Post&#8208;expand include size: 2233/2097152 bytes
 Template argument size: 742/2097152 bytes
@@ -179,16 +179,16 @@ Unstrip post&#8208;expand size: 3298/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.450      1 -total
- 25.33%    2.394      4 Template:Code
- 14.55%    1.375      5 Template:Incode
- 12.83%    1.213      1 Template:TOCright
- 11.69%    1.105      3 Template:Button
- 11.24%    1.062      4 Template:MenuCommand
- 10.14%    0.958      3 Template:FileName
+100.00%   19.952      1 -total
+ 25.71%    5.129      1 Template:TOCright
+ 20.47%    4.085      3 Template:FileName
+ 17.84%    3.560      5 Template:Incode
+ 14.23%    2.838      4 Template:Code
+  7.66%    1.529      4 Template:MenuCommand
+  5.75%    1.148      3 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410040-0!canonical and timestamp 20260121205912 and revision id 1742086. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410040-0!canonical and timestamp 20260121210003 and revision id 1742087. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
