--- a/wiki/Robust_MCP_Bridge_Workbench.html
+++ b/wiki/Robust_MCP_Bridge_Workbench.html
@@ -1,5 +1,5 @@
 <link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Robust MCP Bridge Workbench</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="index.php?title=Special;Translate&amp;group=page-Robust+MCP+Bridge+Workbench&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="de/Robust_MCP_Bridge_Workbench.html" class="mw-pt-progress mw-pt-progress--complete" title="Arbeitsbereich Robust MCP Bridge (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="de/Robust_MCP_Bridge_Workbench.html" class="mw-pt-progress mw-pt-progress--high" title="Arbeitsbereich Robust MCP Bridge (98% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><span class="mw-pt-languages-ui mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="en" dir="ltr">English</span></li>
 <li><a href="fr/Robust_MCP_Bridge_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Atelier Robust MCP Bridge (2% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li></ul></div>
 <figure typeof="mw:File/Thumb"><a href="index.php?title=FreecadRobustMCPBridge.svg&amp;filetimestamp=20260111060448&amp;.html" class="mw-file-description"><img src="File/FreecadRobustMCPBridge.svg" decoding="async" width="128" height="128" class="mw-file-element" data-file-width="64" data-file-height="64"></a><figcaption>Robust MCP Bridge Workbench icon</figcaption></figure>
@@ -163,32 +163,32 @@
 <li><a rel="nofollow" class="external text" href="https://modelcontextprotocol.io/">Model Context Protocol</a> - The protocol specification.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260121205954
+Cached time: 20260121210101
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.088 seconds
-Real time usage: 0.157 seconds
+CPU time usage: 0.075 seconds
+Real time usage: 0.098 seconds
 Preprocessor visited node count: 251/1000000
 Post&#8208;expand include size: 2233/2097152 bytes
 Template argument size: 742/2097152 bytes
 Highest expansion depth: 4/100
 Expensive parser function count: 4/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 3298/5000000 bytes
+Unstrip post&#8208;expand size: 3293/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   19.952      1 -total
- 25.71%    5.129      1 Template:TOCright
- 20.47%    4.085      3 Template:FileName
- 17.84%    3.560      5 Template:Incode
- 14.23%    2.838      4 Template:Code
-  7.66%    1.529      4 Template:MenuCommand
-  5.75%    1.148      3 Template:Button
+100.00%    8.942      1 -total
+ 22.99%    2.056      4 Template:Code
+ 16.27%    1.455      5 Template:Incode
+ 12.90%    1.154      1 Template:TOCright
+ 11.89%    1.063      4 Template:MenuCommand
+ 11.78%    1.053      3 Template:Button
+ 10.22%    0.914      3 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410040-0!canonical and timestamp 20260121210003 and revision id 1742087. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410040-0!canonical and timestamp 20260121210101 and revision id 1742087. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="site.js"></script>
