--- a/wiki/de/File_Format_FCStd.html
+++ b/wiki/de/File_Format_FCStd.html
@@ -5,7 +5,7 @@
 <li><a href="../es/File_Format_FCStd.html" class="mw-pt-progress mw-pt-progress--high" title="File Format FCStd (88% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><a href="../fr/File_Format_FCStd.html" class="mw-pt-progress mw-pt-progress--high" title="Fichier au format FCStd (92% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/File_Format_FCStd.html" class="mw-pt-progress mw-pt-progress--high" title="Formato dei file FCStd (92% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/File_Format_FCStd.html" class="mw-pt-progress mw-pt-progress--high" title="Format pliku FCStd (92% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/File_Format_FCStd.html" class="mw-pt-progress mw-pt-progress--complete" title="Format pliku FCStd (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt/File_Format_FCStd.html" class="mw-pt-progress mw-pt-progress--low" title="File Format FCStd (4% translated)" lang="pt" dir="ltr">portugu&ecirc;s</a></li>
 <li><a href="../pt-br/File_Format_FCStd.html" class="mw-pt-progress mw-pt-progress--high" title="Formato do arquivo FCStd (92% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/File_Format_FCStd.html" class="mw-pt-progress mw-pt-progress--low" title="Formatul fi&#537;ierului FCStd (8% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
@@ -148,10 +148,8 @@
 <p><span id="Embedding_other_files"></span>
 </p>
 <h2><span class="mw-headline" id="Andere_Dateien_einbetten">Andere Dateien einbetten</span></h2>
-<div class="mw-translate-fuzzy">
 <p>Um andere Dateitypen in eine FCStd-Datei einzubetten, muss zun&auml;chst ein <a href="../de/Scripted_objects.html" title="Scripted objects/de">skriptgeneriertes Objekt</a> in der <a href="../de/Python_Console.html" title="Python Console/de">Python-Konsole</a> erstellt und ihm dann eine <code>App::PropertyFileIncluded</code>-Eigenschaft gegeben werden.
 </p>
-</div>
 <div class="mw-translate-fuzzy">
 <p>Anschlie&szlig;end kann in der <a href="../de/Property_View.html" title="Property View/de">Eigenschaften-Ansicht</a> der hinzugef&uuml;gten Eigenschaft eine Datei auf dem Computer zugeordnet werden. Wird die FCStd-Datei gespeichert, wird auch die der Eigenschaft <span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>PropertyFileIncluded</b> zugewiesene Datei in das <code>.FCStd</code>-Dokument gepackt. Wenn das Dokument wiederhergestellt wird, wird dieselbe Datei mit der Eigenschaft <span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>PropertyFileIncluded</b> auch wiederhergestellt.
 </p>
@@ -183,35 +181,35 @@
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121160315
+Cached time: 20260121213105
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.071 seconds
-Real time usage: 0.091 seconds
-Preprocessor visited node count: 292/1000000
+CPU time usage: 0.069 seconds
+Real time usage: 0.113 seconds
+Preprocessor visited node count: 291/1000000
 Post&#8208;expand include size: 8287/2097152 bytes
 Template argument size: 6011/2097152 bytes
 Highest expansion depth: 8/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 20661/5000000 bytes
+Unstrip post&#8208;expand size: 20666/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   19.691      1 -total
- 29.57%    5.822      1 Template:Userdocnavi/de
- 16.63%    3.274      2 Template:PropertyData/de
- 13.92%    2.741      1 Template:Navigation_menu_2
- 12.42%    2.446      2 Template:Code
-  9.02%    1.776     16 Template:FileName
-  8.44%    1.662      2 Template:Variable
-  7.95%    1.565      2 Template:Incode
-  7.92%    1.559      1 Template:Clear
-  7.84%    1.543      1 Template:TOCright
+100.00%   24.932      1 -total
+ 22.80%    5.684      2 Template:PropertyData/de
+ 18.65%    4.650      1 Template:Userdocnavi/de
+ 12.05%    3.004      2 Template:Code
+ 11.04%    2.753      1 Template:Clear
+ 10.38%    2.588      2 Template:Incode
+ 10.18%    2.538     16 Template:FileName
+  9.52%    2.373      2 Template:Variable
+  7.94%    1.979      1 Template:TOCright
+  7.73%    1.927      1 Template:Navigation_menu_2
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:197211-0!canonical and timestamp 20260121160315 and revision id 1741942. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:197211-0!canonical and timestamp 20260121213105 and revision id 1742095. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
