doppelte Eigenschaft entf.

--- a/wiki/de/File_Format_FCStd.html
+++ b/wiki/de/File_Format_FCStd.html
@@ -1,6 +1,6 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">File Format FCStd/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-File+Format+FCStd&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../id/File_Format_FCStd.html" class="mw-pt-progress mw-pt-progress--low" title="File Format FCStd (4% translated)" lang="id" dir="ltr">Bahasa Indonesia</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../File_Format_FCStd.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="File Format FCStd (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../es/File_Format_FCStd.html" class="mw-pt-progress mw-pt-progress--high" title="File Format FCStd (88% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><a href="../fr/File_Format_FCStd.html" class="mw-pt-progress mw-pt-progress--high" title="Fichier au format FCStd (92% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
@@ -149,11 +149,8 @@
 </p>
 <h2><span class="mw-headline" id="Andere_Dateien_einbetten">Andere Dateien einbetten</span></h2>
 <p>Um andere Dateitypen in eine FCStd-Datei einzubetten, muss zun&auml;chst ein <a href="../de/Scripted_objects.html" title="Scripted objects/de">skriptgeneriertes Objekt</a> in der <a href="../de/Python_Console.html" title="Python Console/de">Python-Konsole</a> erstellt und ihm dann eine <code>App::PropertyFileIncluded</code>-Eigenschaft gegeben werden.
+</p><p>Anschlie&szlig;end kann in der <a href="../de/Property_View.html" title="Property View/de">Eigenschaften-Ansicht</a> der hinzugef&uuml;gten Eigenschaft eine Datei auf dem Computer zugeordnet werden. Wird die FCStd-Datei gespeichert, wird auch die der <span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>PropertyFileIncluded</b> zugewiesene Datei in das <code>.FCStd</code>-Dokument gepackt. Wenn das Dokument wiederhergestellt wird, wird dieselbe Datei mit der <span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>PropertyFileIncluded</b> auch wiederhergestellt.
 </p>
-<div class="mw-translate-fuzzy">
-<p>Anschlie&szlig;end kann in der <a href="../de/Property_View.html" title="Property View/de">Eigenschaften-Ansicht</a> der hinzugef&uuml;gten Eigenschaft eine Datei auf dem Computer zugeordnet werden. Wird die FCStd-Datei gespeichert, wird auch die der Eigenschaft <span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>PropertyFileIncluded</b> zugewiesene Datei in das <code>.FCStd</code>-Dokument gepackt. Wenn das Dokument wiederhergestellt wird, wird dieselbe Datei mit der Eigenschaft <span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>PropertyFileIncluded</b> auch wiederhergestellt.
-</p>
-</div>
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="n">custom_obj</span> <span class="o">=</span> <span class="n">App</span><span class="o">.</span><span class="n">ActiveDocument</span><span class="o">.</span><span class="n">addObject</span><span class="p">(</span><span class="s2">"App::FeaturePython"</span><span class="p">,</span> <span class="s2">"CustomObject"</span><span class="p">)</span>
 <span class="n">custom_obj</span><span class="o">.</span><span class="n">addProperty</span><span class="p">(</span><span class="s2">"App::PropertyFileIncluded"</span><span class="p">,</span> <span class="s2">"AttachedFile"</span><span class="p">)</span>
 </pre></div>
@@ -181,35 +178,35 @@
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121213105
+Cached time: 20260121213344
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.069 seconds
-Real time usage: 0.113 seconds
-Preprocessor visited node count: 291/1000000
+CPU time usage: 0.084 seconds
+Real time usage: 0.408 seconds
+Preprocessor visited node count: 290/1000000
 Post&#8208;expand include size: 8287/2097152 bytes
 Template argument size: 6011/2097152 bytes
 Highest expansion depth: 8/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 20666/5000000 bytes
+Unstrip post&#8208;expand size: 20670/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   24.932      1 -total
- 22.80%    5.684      2 Template:PropertyData/de
- 18.65%    4.650      1 Template:Userdocnavi/de
- 12.05%    3.004      2 Template:Code
- 11.04%    2.753      1 Template:Clear
- 10.38%    2.588      2 Template:Incode
- 10.18%    2.538     16 Template:FileName
-  9.52%    2.373      2 Template:Variable
-  7.94%    1.979      1 Template:TOCright
-  7.73%    1.927      1 Template:Navigation_menu_2
+100.00%   54.853      1 -total
+ 25.08%   13.760      1 Template:Userdocnavi/de
+ 21.66%   11.881      2 Template:PropertyData/de
+ 12.61%    6.916      2 Template:Code
+ 12.35%    6.775      1 Template:Navigation_menu_2
+ 10.69%    5.864      2 Template:Incode
+  7.41%    4.067     16 Template:FileName
+  6.81%    3.733      2 Template:Variable
+  6.77%    3.715      1 Template:TOCright
+  6.22%    3.413      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:197211-0!canonical and timestamp 20260121213105 and revision id 1742095. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:197211-0!canonical and timestamp 20260121213343 and revision id 1742097. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
