--- a/wiki/de/Workbench_creation.html
+++ b/wiki/de/Workbench_creation.html
@@ -1,10 +1,10 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Workbench creation/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Workbench+creation&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../Workbench_creation.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Workbench creation (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../es/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--low" title="Workbench creation/es (2% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><a href="../fr/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--high" title="Cr&eacute;ation d'atelier (98% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--high" title="Creare un Ambiente di lavoro (83% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--high" title="Tworzenie &#347;rodowiska pracy (98% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--complete" title="Tworzenie &#347;rodowiska pracy (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--med" title="Cria&ccedil;&atilde;o de bancadas de trabalho (23% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--low" title="Workbench creation/ro (2% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
 <li><a href="../cs/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--low" title="Vytvo&#345;en&iacute; pracovn&iacute; plochy (2% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
@@ -402,11 +402,9 @@ Arbeitsbereichsdefinition selbst auch in C++ programmieren (obwohl es nicht notw
 </p><p><span id="Related"></span>
 </p>
 <h2><span class="mw-headline" id="Verwandtes">Verwandtes</span></h2>
-<div class="mw-translate-fuzzy">
 <ul><li><a href="../de/Translating_an_external_workbench.html" title="Translating an external workbench/de">&Uuml;bersetzen eines externen Arbeitsbereichs</a></li>
 <li><a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?t=47460">Forum discussion: Namespaced Workbenches</a></li>
-<li><a rel="nofollow" class="external text" href="https://github.com/FreeCAD/Addon-Template">Addon Template</a></li></ul>
-</div>
+<li><a rel="nofollow" class="external text" href="https://github.com/FreeCAD/Addon-Template">Addon-Vorlage</a> (engl.)</li></ul>
 <p><br>
 </p>
 <div class="docnav">
@@ -436,35 +434,35 @@ Arbeitsbereichsdefinition selbst auch in C++ programmieren (obwohl es nicht notw
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121163102
+Cached time: 20260121213825
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.139 seconds
-Real time usage: 0.209 seconds
-Preprocessor visited node count: 473/1000000
+CPU time usage: 0.100 seconds
+Real time usage: 0.162 seconds
+Preprocessor visited node count: 472/1000000
 Post&#8208;expand include size: 10453/2097152 bytes
 Template argument size: 13108/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 12/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 32815/5000000 bytes
+Unstrip post&#8208;expand size: 32824/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   37.284      1 -total
- 24.78%    9.239      1 Template:Powerdocnavi/de
- 15.63%    5.826     12 Template:Code
-  9.45%    3.523      2 Template:Docnav/de
-  7.47%    2.783      5 Template:FileName
-  7.03%    2.621      1 Template:Navigation_menu_2
-  6.64%    2.476      1 Template:VersionMinus/de
-  6.22%    2.319      1 Template:VersionPlus/de
-  5.53%    2.060      1 Template:MenuCommand
-  5.47%    2.038      9 Template:Incode
+100.00%   33.152      1 -total
+ 27.08%    8.979      1 Template:Powerdocnavi/de
+ 18.73%    6.210     12 Template:Code
+  7.11%    2.356      9 Template:Incode
+  7.09%    2.350      1 Template:Navigation_menu_2
+  7.06%    2.341      2 Template:Docnav/de
+  6.45%    2.137      1 Template:MenuCommand
+  6.12%    2.029      1 Template:VersionPlus/de
+  5.53%    1.832      1 Template:TOCright
+  5.36%    1.776      1 Template:VersionMinus/de
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:64470-0!canonical and timestamp 20260121163102 and revision id 1741964. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:64470-0!canonical and timestamp 20260121213825 and revision id 1742099. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
