--- a/wiki/de/Workbench_creation.html
+++ b/wiki/de/Workbench_creation.html
@@ -375,7 +375,7 @@ Arbeitsbereichsdefinition selbst auch in C++ programmieren (obwohl es nicht notw
 </pre></div>
 <p><span id="New_Standard_External_Workbench"></span>
 </p>
-<h2><span class="mw-headline" id="Neuer_Standard-Externer-Arbeitsbereich">Neuer Standard-Externer-Arbeitsbereich</span></h2>
+<h2><span class="mw-headline" id="Externer_Arbeitsbereich_nach_neuem_Standard">Externer Arbeitsbereich nach neuem Standard</span></h2>
 <p>Die Struktur und der Dateiinhalt f&uuml;r eine oben beschriebene Workbench sind die klassische Methode zum Erstellen eines neuen Arbeitsbereichs. Bei der Erstellung eines neuen Python-Arbeitsbereichs kann man eine leichte Abweichung in der Dateistruktur verwenden. Diese alternative Methode l&auml;sst sich am besten als <b>namespaced workbench</b> beschreiben und er&ouml;ffnet die M&ouml;glichkeit, den Arbeitsbereich mit pip zu installieren. Beide Strukturen funktionieren, daher ist es eher eine Frage der Pr&auml;ferenz, wenn man einen neue Arbeitsbereich erstellt. Der Stil und die Struktur dieses Arbeitsbereichs befinden sich in einem dedizierten Namensraum und ist nicht im globalen Namensraum von FreeCAD verf&uuml;gbar.
 </p>
 <pre>(Erl&auml;uterung zu <b>dedizierter Namensraum</b> hinzuf&uuml;gen)
@@ -434,12 +434,12 @@ Arbeitsbereichsdefinition selbst auch in C++ programmieren (obwohl es nicht notw
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121213825
+Cached time: 20260121214028
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.100 seconds
-Real time usage: 0.162 seconds
+CPU time usage: 0.104 seconds
+Real time usage: 0.193 seconds
 Preprocessor visited node count: 472/1000000
 Post&#8208;expand include size: 10453/2097152 bytes
 Template argument size: 13108/2097152 bytes
@@ -450,19 +450,19 @@ Unstrip post&#8208;expand size: 32824/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   33.152      1 -total
- 27.08%    8.979      1 Template:Powerdocnavi/de
- 18.73%    6.210     12 Template:Code
-  7.11%    2.356      9 Template:Incode
-  7.09%    2.350      1 Template:Navigation_menu_2
-  7.06%    2.341      2 Template:Docnav/de
-  6.45%    2.137      1 Template:MenuCommand
-  6.12%    2.029      1 Template:VersionPlus/de
-  5.53%    1.832      1 Template:TOCright
-  5.36%    1.776      1 Template:VersionMinus/de
+100.00%   27.892      1 -total
+ 19.94%    5.563      1 Template:Powerdocnavi/de
+ 15.44%    4.307     12 Template:Code
+ 10.55%    2.942      1 Template:VeryImportantMessage
+ 10.52%    2.935      2 Template:Docnav/de
+  9.02%    2.516      1 Template:Navigation_menu_2
+  7.69%    2.145      1 Template:TOCright
+  6.84%    1.909      9 Template:Incode
+  6.52%    1.819      1 Template:VersionPlus/de
+  4.85%    1.354      1 Template:VersionMinus/de
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:64470-0!canonical and timestamp 20260121213825 and revision id 1742099. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:64470-0!canonical and timestamp 20260121214028 and revision id 1742101. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
