--- a/wiki/de/Scripted_objects.html
+++ b/wiki/de/Scripted_objects.html
@@ -1,6 +1,6 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Scripted objects/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Scripted+objects&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../id/Scripted_objects.html" class="mw-pt-progress mw-pt-progress--low" title="Scripted objects (1% translated)" lang="id" dir="ltr">Bahasa Indonesia</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../Scripted_objects.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Scripted objects (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../tr/Scripted_objects.html" class="mw-pt-progress mw-pt-progress--low" title="Scripted objects (1% translated)" lang="tr" dir="ltr">T&uuml;rk&ccedil;e</a></li>
 <li><a href="../es/Scripted_objects.html" class="mw-pt-progress mw-pt-progress--low" title="Scripted objects (5% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
@@ -1000,11 +1000,8 @@
 <p><span id="Available_extensions"></span>
 </p>
 <h2><span class="mw-headline" id="Vorhandene_Erweiterungen">Vorhandene Erweiterungen</span></h2>
-<div class="mw-translate-fuzzy">
-<p>Die Liste der verf&uuml;gbaren Erweiterungen kann mit dem Befehl <code>grep -RI EXTENSION_PROPERTY_SOURCE_TEMPLATE</code> erhalten werden, im Quellcode-Verzeichnis und ist hier aufgelistet (f&uuml;r FreeCAD v0.21).
-</p>
-</div>
-<p>F&uuml;r Objekte:
+<p>Die Liste der verf&uuml;gbaren Erweiterungen erh&auml;lt man im Quellcode-Verzeichnis mit dem Befehl <code>grep -RI EXTENSION_PROPERTY_SOURCE_TEMPLATE</code> und ist hier aufgelistet (f&uuml;r FreeCAD v1.1).
+</p><p>F&uuml;r Objekte:
 </p>
 <ul><li><code>App::GeoFeatureGroupExtensionPython</code></li>
 <li><code>App::GroupExtensionPython</code></li>
@@ -1079,33 +1076,33 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121205646
+Cached time: 20260121215933
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.202 seconds
-Real time usage: 0.879 seconds
-Preprocessor visited node count: 1150/1000000
+CPU time usage: 0.229 seconds
+Real time usage: 0.389 seconds
+Preprocessor visited node count: 1149/1000000
 Post&#8208;expand include size: 13634/2097152 bytes
 Template argument size: 33676/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 19/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 137517/5000000 bytes
+Unstrip post&#8208;expand size: 137521/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  111.959      1 -total
- 36.32%   40.668     19 Template:Code
- 16.31%   18.257      1 Template:Powerdocnavi/de
- 10.79%   12.085    119 Template:Incode
-  5.93%    6.641      2 Template:Docnav/de
-  5.50%    6.158      1 Template:Navigation_menu_2
-  4.62%    5.171      1 Template:Version
-  2.77%    3.100      1 Template:TOCright
+100.00%   54.038      1 -total
+ 35.42%   19.140     19 Template:Code
+ 25.65%   13.858    119 Template:Incode
+ 14.22%    7.682      1 Template:Powerdocnavi/de
+  5.22%    2.822      2 Template:Docnav/de
+  4.70%    2.541      1 Template:Version
+  3.09%    1.668      1 Template:Navigation_menu_2
+  2.29%    1.237      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2266-0!canonical and timestamp 20260121205645 and revision id 1742077. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2266-0!canonical and timestamp 20260121215932 and revision id 1742105. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
