--- a/wiki/de/Scripted_objects.html
+++ b/wiki/de/Scripted_objects.html
@@ -1000,7 +1000,7 @@
 <p><span id="Available_extensions"></span>
 </p>
 <h2><span class="mw-headline" id="Vorhandene_Erweiterungen">Vorhandene Erweiterungen</span></h2>
-<p>Die Liste der verf&uuml;gbaren Erweiterungen erh&auml;lt man im Quellcode-Verzeichnis mit dem Befehl <code>grep -RI EXTENSION_PROPERTY_SOURCE_TEMPLATE</code> und ist hier aufgelistet (f&uuml;r FreeCAD v1.1).
+<p>Die Liste der verf&uuml;gbaren Erweiterungen kann mit <code>grep -RI EXTENSION_PROPERTY_SOURCE_TEMPLATE</code> im Repository des Quellcodes abgerufen werden und ist hier aufgef&uuml;hrt (f&uuml;r FreeCAD v1.1).
 </p><p>F&uuml;r Objekte:
 </p>
 <ul><li><code>App::GeoFeatureGroupExtensionPython</code></li>
@@ -1076,12 +1076,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121215933
+Cached time: 20260121220137
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.229 seconds
-Real time usage: 0.389 seconds
+CPU time usage: 0.250 seconds
+Real time usage: 0.766 seconds
 Preprocessor visited node count: 1149/1000000
 Post&#8208;expand include size: 13634/2097152 bytes
 Template argument size: 33676/2097152 bytes
@@ -1092,17 +1092,17 @@ Unstrip post&#8208;expand size: 137521/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   54.038      1 -total
- 35.42%   19.140     19 Template:Code
- 25.65%   13.858    119 Template:Incode
- 14.22%    7.682      1 Template:Powerdocnavi/de
-  5.22%    2.822      2 Template:Docnav/de
-  4.70%    2.541      1 Template:Version
-  3.09%    1.668      1 Template:Navigation_menu_2
-  2.29%    1.237      1 Template:TOCright
+100.00%  167.413      1 -total
+ 47.57%   79.645     19 Template:Code
+ 18.90%   31.643      1 Template:Powerdocnavi/de
+ 10.86%   18.173    119 Template:Incode
+  7.31%   12.234      2 Template:Docnav/de
+  5.53%    9.266      1 Template:Version
+  5.15%    8.625      1 Template:Navigation_menu_2
+  4.83%    8.082      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2266-0!canonical and timestamp 20260121215932 and revision id 1742105. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2266-0!canonical and timestamp 20260121220136 and revision id 1742107. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
