Updated page Package Metadata/de

--- a/wiki/de/Package_Metadata.html
+++ b/wiki/de/Package_Metadata.html
@@ -9,11 +9,8 @@
 <p><span id="Introduction"></span>
 </p>
 <h2><span class="mw-headline" id="Einleitung">Einleitung</span></h2>
-<div class="mw-translate-fuzzy">
-<p>Beginnend mit FreeCAD Version 0.20 k&ouml;nnen externe Addons (Arbeitsbereiche, Makros, Voreinstellungspakete, Bundles<sup><a href="../de/Release_notes_1.1.html" title="Release notes 1.1/de">eingef&uuml;hrt in 1.1</a></sup> und "andere", allgemeine Werkzeugsammlungen<sup><a href="../de/Release_notes_1.1.html" title="Release notes 1.1/de">eingef&uuml;hrt in 1.1</a></sup>) mit einer Metadaten-Datei vertrieben werden, die den Inhalt des Pakets beschreibt. Ist die Datei "package.xml" vorhanden, wird sie von FreeCAD ausgelesen und ihre Inhalte in verschiedenen Bereichen der Benutzerschnittstelle verwendet. Derzeit ist es f&uuml;r Arbeitsbereiche und Makros optional und f&uuml;r Voreinstellungspakete erforderlich. Diese Seite dokumentiert das Format dieser Metadaten-Datei. Das Format (und der Inhalt dieser Wikiseite) basiert auf <a rel="nofollow" class="external text" href="https://ros.org/reps/rep-0149.html">REP 149</a>.
-</p>
-</div>
-<p><span id="Overall_file_format"></span>
+<p>Ab FreeCAD v0.20 sollten Addons mit einer Manifestdatei verteilt werden, die ihren Inhalt beschreibt. FreeCAD verwendet diese Metadaten, um zu bestimmen, welche Ressourcen geladen und welche Abh&auml;ngigkeiten zus&auml;tzlich installiert werden m&uuml;ssen. Die Datei enth&auml;lt auch Informationen, die zur Anzeige des Addons im Addon-Manager verwendet werden.
+</p><p><span id="Overall_file_format"></span>
 </p>
 <h2><span class="mw-headline" id="Gesamtdateiformat">Gesamtdateiformat</span></h2>
 <p>Dieses Dokument beschreibt derzeit das Datenformat in Version 1.
@@ -406,15 +403,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121220409
+Cached time: 20260121220824
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.075 seconds
-Real time usage: 0.626 seconds
-Preprocessor visited node count: 542/1000000
-Post&#8208;expand include size: 7649/2097152 bytes
-Template argument size: 2697/2097152 bytes
+CPU time usage: 0.076 seconds
+Real time usage: 0.231 seconds
+Preprocessor visited node count: 527/1000000
+Post&#8208;expand include size: 7541/2097152 bytes
+Template argument size: 2685/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
@@ -422,18 +419,17 @@ Unstrip post&#8208;expand size: 8525/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  466.364      1 -total
-  3.53%   16.452      1 Template:Powerdocnavi/de
-  1.13%    5.267      2 Template:VersionNote/de
-  0.83%    3.893     37 Template:Incode
-  0.49%    2.289      3 Template:Version/de
-  0.45%    2.105      1 Template:Navigation_menu_2
-  0.43%    2.011      1 Template:MenuCommand
-  0.41%    1.908      1 Template:Code
-  0.33%    1.542      1 Template:TOCright
+100.00%   48.683      1 -total
+ 38.96%   18.968      1 Template:Powerdocnavi/de
+ 15.26%    7.428      1 Template:Navigation_menu_2
+ 10.77%    5.242      1 Template:MenuCommand
+ 10.10%    4.916      1 Template:Code
+  8.28%    4.030     37 Template:Incode
+  8.28%    4.029      3 Template:Version/de
+  6.58%    3.202      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:322733-0!canonical and timestamp 20260121220408 and revision id 1742111. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:322733-0!canonical and timestamp 20260121220824 and revision id 1742113. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
