--- a/wiki/de/Package_Metadata.html
+++ b/wiki/de/Package_Metadata.html
@@ -20,10 +20,8 @@
 </p>
 <h2><span class="mw-headline" id="Tags">Tags</span></h2>
 <h3><span id=".3Cpackage.3E"></span><span class="mw-headline" id="&lt;package&gt;">&lt;package&gt;</span></h3>
-<div class="mw-translate-fuzzy">
-<p>Das einzige zul&auml;ssige Element der obersten Ebene ist &lt;package&gt;, und die Datei darf nur ein &lt;package&gt;-Element enthalten. Unmittelbar darunter befinden sich mehrere erforderliche oder optionale Elemente, die hier definiert sind. Unter dem &lt;package&gt;-Element sind keine weiteren Tags zul&auml;ssig.
+<p>Das &lt;package&gt;-Tag ist das einzige Element der obersten Ebene, das im Manifest zul&auml;ssig ist, und es darf nur eines vorhanden sein. Alle anderen Tags und deren Inhalte sind darin verschachtelt.
 </p>
-</div>
 <div class="mw-highlight mw-highlight-lang-xml mw-content-ltr" dir="ltr"><pre><span></span><span class="nt">&lt;package</span><span class="w"> </span>
 <span class="w">    </span><span class="na">format=</span><span class="s">"1"</span>
 <span class="w">    </span><span class="na">xmlns=</span><span class="s">"https://wiki.freecad.org/Package_Metadata"</span>
@@ -400,13 +398,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121220908
+Cached time: 20260121221003
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.073 seconds
-Real time usage: 0.109 seconds
-Preprocessor visited node count: 525/1000000
+CPU time usage: 0.090 seconds
+Real time usage: 0.322 seconds
+Preprocessor visited node count: 524/1000000
 Post&#8208;expand include size: 7541/2097152 bytes
 Template argument size: 2685/2097152 bytes
 Highest expansion depth: 5/100
@@ -416,17 +414,17 @@ Unstrip post&#8208;expand size: 8525/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   28.056      1 -total
- 31.84%    8.933      1 Template:Powerdocnavi/de
- 13.69%    3.841      1 Template:Code
- 13.64%    3.828     37 Template:Incode
- 12.86%    3.608      3 Template:Version/de
-  9.72%    2.726      1 Template:MenuCommand
-  8.71%    2.445      1 Template:Navigation_menu_2
-  7.01%    1.967      1 Template:TOCright
+100.00%  114.770      1 -total
+ 25.89%   29.712      1 Template:Powerdocnavi/de
+ 21.72%   24.929     37 Template:Incode
+ 16.14%   18.522      3 Template:Version/de
+ 13.25%   15.207      1 Template:Code
+  7.38%    8.469      1 Template:TOCright
+  4.19%    4.812      1 Template:Navigation_menu_2
+  3.56%    4.089      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:322733-0!canonical and timestamp 20260121220908 and revision id 1742115. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:322733-0!canonical and timestamp 20260121221003 and revision id 1742117. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
