--- a/wiki/de/Package_Metadata.html
+++ b/wiki/de/Package_Metadata.html
@@ -35,10 +35,8 @@
 <p><span id="Required_Tags"></span>
 </p>
 <h4><span class="mw-headline" id="Erforderliche_Tags">Erforderliche Tags</span></h4>
-<div class="mw-translate-fuzzy">
-<p>Das oberste Element &lt;package&gt; muss mindestens die folgenden Tags enthalten:
+<p>Die folgenden Tags m&uuml;ssen im Element &lt;package&gt; vorhanden sein:
 </p>
-</div>
 <div class="mw-translate-fuzzy">
 <ul><li><a href="#.3Cname.3E">&lt;name&gt;</a></li>
 <li><a href="#.3Cversion.3E">&lt;version&gt;</a></li>
@@ -394,13 +392,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121221158
+Cached time: 20260121221214
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.070 seconds
-Real time usage: 0.175 seconds
-Preprocessor visited node count: 522/1000000
+CPU time usage: 0.093 seconds
+Real time usage: 0.310 seconds
+Preprocessor visited node count: 521/1000000
 Post&#8208;expand include size: 7541/2097152 bytes
 Template argument size: 2685/2097152 bytes
 Highest expansion depth: 5/100
@@ -410,17 +408,17 @@ Unstrip post&#8208;expand size: 8525/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   42.332      1 -total
- 37.62%   15.927      1 Template:Powerdocnavi/de
- 14.02%    5.934      1 Template:MenuCommand
- 13.62%    5.767      1 Template:Navigation_menu_2
- 12.57%    5.320      3 Template:Version/de
-  7.04%    2.980     37 Template:Incode
-  5.51%    2.332      1 Template:TOCright
-  4.75%    2.010      1 Template:Code
+100.00%  113.359      1 -total
+ 36.52%   41.400      1 Template:Powerdocnavi/de
+ 20.96%   23.755     37 Template:Incode
+ 20.35%   23.071      1 Template:Code
+ 15.82%   17.932      1 Template:Navigation_menu_2
+  7.51%    8.518      3 Template:Version/de
+  4.27%    4.845      1 Template:TOCright
+  3.99%    4.525      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:322733-0!canonical and timestamp 20260121221157 and revision id 1742121. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:322733-0!canonical and timestamp 20260121221213 and revision id 1742123. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
