Updated page Package Metadata/de

--- a/wiki/de/Package_Metadata.html
+++ b/wiki/de/Package_Metadata.html
@@ -48,17 +48,15 @@
 <p><span id="Optional_Tags"></span>
 </p>
 <h4><span class="mw-headline" id="Optionale_Tags">Optionale Tags</span></h4>
-<div class="mw-translate-fuzzy">
-<ul><li><a href="#.3Curl.3E">&lt;url&gt;</a> (mehrere)</li>
-<li><a href="#.3Cauthor.3E">&lt;author&gt;</a> (mehrere)</li>
-<li><a href="#.3Cdepend.3E">&lt;depend&gt;</a> (mehrere)</li>
-<li><a href="#.3Cconflict.3E">&lt;conflict&gt;</a> (mehrere)</li>
-<li><a href="#.3Creplace.3E">&lt;replace&gt;</a> (mehrere)</li>
-<li><a href="#.3Ctag.3E">&lt;tag&gt;</a> (mehrere)</li>
+<ul><li><a href="#.3Curl.3E">&lt;url&gt;</a></li>
+<li><a href="#.3Cauthor.3E">&lt;author&gt;</a></li>
+<li><a href="#.3Cdepend.3E">&lt;depend&gt;</a></li>
+<li><a href="#.3Cconflict.3E">&lt;conflict&gt;</a></li>
+<li><a href="#.3Creplace.3E">&lt;replace&gt;</a></li>
+<li><a href="#.3Ctag.3E">&lt;tag&gt;</a></li>
 <li><a href="#.3Cfreecadmin.3E">&lt;freecadmin&gt;</a></li>
 <li><a href="#.3Cfreecadmax.3E">&lt;freecadmax&gt;</a></li>
 <li><a href="#.3Cpythonmin.3E">&lt;pythonmin&gt;</a></li></ul>
-</div>
 <h3><span id=".3Cname.3E"></span><span class="mw-headline" id="&lt;name&gt;">&lt;name&gt;</span></h3>
 <p>ERFORDERLICH
 </p><p>Der Name dieses Pakets. Darf nur Zeichen enthalten, die f&uuml;r Dateinamen zul&auml;ssig sind (unzul&auml;ssige Zeichen sind /\?%*:|"&lt;&gt; ).
@@ -89,9 +87,7 @@
 <h3><span id=".3Clicense.3E"></span><span class="mw-headline" id="&lt;license&gt;">&lt;license&gt;</span></h3>
 <p>MINDESTENS EINS ERFORDERLICH (mehrere zul&auml;ssig)
 </p><p>SPDX-Kurzbezeichnung der Lizenz(en) f&uuml;r dieses Paket, z. B. BSD-2-Clause, GPL-3.0-or-later, LGPL-2.1-or-later. Um die Maschinenlesbarkeit zu verbessern, wird nur die SPDX-Kurzbezeichnung der Lizenz angegeben (siehe <a rel="nofollow" class="external text" href="https://spdx.org/licenses/">die SPDX-Webseite</a>). Bei mehreren Lizenzen m&uuml;ssen mehrere separate Tags verwendet werden. Ein Paket hat mehrere Lizenzen, wenn verschiedene Quelldateien unterschiedliche Lizenzen haben. Jede in den Quelldateien vorkommende Lizenz sollte einen entsprechenden &lt;license&gt;-Tag haben. F&uuml;r erl&auml;uternde Texte zu Lizenzhinweisen verwendet man den &lt;description&gt;-Tag. Um anzugeben, dass keine Lizenz gilt (z. B. "Alle Rechte vorbehalten."), wird dieser Wert auf "UNLICENSED" gesetzt. Um eine benutzerdefinierte Lizenz ohne SPDX-Kennung anzugeben, setzen man diesen Wert auf "SEE LICENSE IN &lt;Dateiname&gt;".
-</p>
-<div class="mw-translate-fuzzy">
-<p>H&auml;ufig verwendete Lizenzzeichenfolgen:
+</p><p>H&auml;ufig verwendete Lizenzzeichenfolgen:
 </p>
 <ul><li><code>"Apache-2.0"</code></li>
 <li><code>"BSD-2-Clause"</code></li>
@@ -104,7 +100,6 @@
 <li><code>"MIT"</code></li>
 <li><code>"MPL-1.1"</code></li>
 <li><code>"CC0-1.0"</code> (Widmung zur Public Domain)</li></ul>
-</div>
 <p><b>Hinweis zur Abw&auml;rtskompatibilit&auml;t</b>: Der Addon-Manager versucht, Lizenzkennungen zu normalisieren, die nicht genau mit einer SPDX-Lizenzzeichenfolge &uuml;bereinstimmen. Dies f&uuml;hrt manchmal zu einer Lizenz-ID, die eine nicht von der FSF-Libre oder OSI genehmigte Lizenz ergibt: Beispielsweise wird "LGPL2" zu "LGPL-2.0" normalisiert, was eine nicht von der FSF-Libre genehmigte Lizenz ist: Vermutlich war "LGPL-2.1-oder-sp&auml;ter" gemeint.
 </p><p><span id="Attributes"></span>
 </p>
@@ -388,13 +383,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121221247
+Cached time: 20260121221302
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.072 seconds
-Real time usage: 0.134 seconds
-Preprocessor visited node count: 519/1000000
+CPU time usage: 0.088 seconds
+Real time usage: 0.174 seconds
+Preprocessor visited node count: 517/1000000
 Post&#8208;expand include size: 7541/2097152 bytes
 Template argument size: 2685/2097152 bytes
 Highest expansion depth: 5/100
@@ -404,17 +399,17 @@ Unstrip post&#8208;expand size: 8525/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   37.630      1 -total
- 35.37%   13.309      1 Template:Powerdocnavi/de
- 14.03%    5.279      3 Template:Version/de
- 12.75%    4.798     37 Template:Incode
-  9.14%    3.439      1 Template:TOCright
-  9.06%    3.409      1 Template:Navigation_menu_2
-  8.49%    3.193      1 Template:Code
-  8.37%    3.148      1 Template:MenuCommand
+100.00%   39.497      1 -total
+ 31.54%   12.457      1 Template:Powerdocnavi/de
+ 17.56%    6.937     37 Template:Incode
+ 12.54%    4.955      3 Template:Version/de
+ 11.44%    4.520      1 Template:TOCright
+ 11.39%    4.497      1 Template:Navigation_menu_2
+ 10.97%    4.333      1 Template:Code
+  7.02%    2.771      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:322733-0!canonical and timestamp 20260121221246 and revision id 1742127. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:322733-0!canonical and timestamp 20260121221301 and revision id 1742131. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
