Updated page Package Metadata/de

--- a/wiki/de/Package_Metadata.html
+++ b/wiki/de/Package_Metadata.html
@@ -89,17 +89,18 @@
 </p><p>SPDX-Kurzbezeichnung der Lizenz(en) f&uuml;r dieses Paket, z. B. BSD-2-Clause, GPL-3.0-or-later, LGPL-2.1-or-later. Um die Maschinenlesbarkeit zu verbessern, wird nur die SPDX-Kurzbezeichnung der Lizenz angegeben (siehe <a rel="nofollow" class="external text" href="https://spdx.org/licenses/">die SPDX-Webseite</a>). Bei mehreren Lizenzen m&uuml;ssen mehrere separate Tags verwendet werden. Ein Paket hat mehrere Lizenzen, wenn verschiedene Quelldateien unterschiedliche Lizenzen haben. Jede in den Quelldateien vorkommende Lizenz sollte einen entsprechenden &lt;license&gt;-Tag haben. F&uuml;r erl&auml;uternde Texte zu Lizenzhinweisen verwendet man den &lt;description&gt;-Tag. Um anzugeben, dass keine Lizenz gilt (z. B. "Alle Rechte vorbehalten."), wird dieser Wert auf "UNLICENSED" gesetzt. Um eine benutzerdefinierte Lizenz ohne SPDX-Kennung anzugeben, setzen man diesen Wert auf "SEE LICENSE IN &lt;Dateiname&gt;".
 </p><p>H&auml;ufig verwendete Lizenzzeichenfolgen:
 </p>
-<ul><li><code>"Apache-2.0"</code></li>
-<li><code>"BSD-2-Clause"</code></li>
-<li><code>"BSD-3-Clause"</code></li>
-<li><code>"BSL-1.0"</code></li>
-<li><code>"GPL-2.0-or-later"</code></li>
-<li><code>"GPL-3.0-or-later"</code></li>
-<li><code>"LGPL-2.1-or-later"</code></li>
-<li><code>"LGPL-3.0-or-later"</code></li>
-<li><code>"MIT"</code></li>
-<li><code>"MPL-1.1"</code></li>
-<li><code>"CC0-1.0"</code> (Widmung zur Public Domain)</li></ul>
+<ul><li><code>Apache-2.0</code></li>
+<li><code>BSD-2-Clause</code></li>
+<li><code>BSD-3-Clause</code></li>
+<li><code>BSL-1.0</code></li>
+<li><code>GPL-2.0-or-later</code></li>
+<li><code>GPL-3.0-or-later</code></li>
+<li><code>LGPL-2.1-or-later</code></li>
+<li><code>LGPL-3.0-or-later</code></li>
+<li><code>MIT</code></li>
+<li><code>MPL-1.1</code></li>
+<li><code>CC-BY-SA-4.0</code></li>
+<li><code>CC0-1.0</code></li></ul>
 <p><b>Hinweis zur Abw&auml;rtskompatibilit&auml;t</b>: Der Addon-Manager versucht, Lizenzkennungen zu normalisieren, die nicht genau mit einer SPDX-Lizenzzeichenfolge &uuml;bereinstimmen. Dies f&uuml;hrt manchmal zu einer Lizenz-ID, die eine nicht von der FSF-Libre oder OSI genehmigte Lizenz ergibt: Beispielsweise wird "LGPL2" zu "LGPL-2.0" normalisiert, was eine nicht von der FSF-Libre genehmigte Lizenz ist: Vermutlich war "LGPL-2.1-oder-sp&auml;ter" gemeint.
 </p><p><span id="Attributes"></span>
 </p>
@@ -383,15 +384,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121221302
+Cached time: 20260121221403
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.088 seconds
-Real time usage: 0.174 seconds
-Preprocessor visited node count: 517/1000000
-Post&#8208;expand include size: 7541/2097152 bytes
-Template argument size: 2685/2097152 bytes
+CPU time usage: 0.070 seconds
+Real time usage: 0.210 seconds
+Preprocessor visited node count: 523/1000000
+Post&#8208;expand include size: 7544/2097152 bytes
+Template argument size: 2675/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
@@ -399,17 +400,17 @@ Unstrip post&#8208;expand size: 8525/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   39.497      1 -total
- 31.54%   12.457      1 Template:Powerdocnavi/de
- 17.56%    6.937     37 Template:Incode
- 12.54%    4.955      3 Template:Version/de
- 11.44%    4.520      1 Template:TOCright
- 11.39%    4.497      1 Template:Navigation_menu_2
- 10.97%    4.333      1 Template:Code
-  7.02%    2.771      1 Template:MenuCommand
+100.00%   71.293      1 -total
+ 31.52%   22.469      1 Template:Powerdocnavi/de
+ 31.36%   22.360     38 Template:Incode
+ 12.87%    9.172      1 Template:Navigation_menu_2
+  7.14%    5.089      3 Template:Version/de
+  5.75%    4.099      1 Template:MenuCommand
+  4.28%    3.050      1 Template:Code
+  4.18%    2.980      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:322733-0!canonical and timestamp 20260121221301 and revision id 1742131. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:322733-0!canonical and timestamp 20260121221403 and revision id 1742133. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
